[bumpversion]
current_version = 1.0.4
tag = True
commit = True

[bumpversion:file:mixbox/version.py]

[bdist_wheel]
universal = 1

# This is necessary because older versions of setuptools don't support
# environment markers in setup.py, so we have to use conditional imports there.
# Universal wheels, however, do not execute setup.py, so newer versions of pip
# which build and cache wheels may potentially produce broken wheels. For
# example, a wheel built for Python 2.7 won't include the need for weakrefset,
# since WeakSet is in the standard library in Python 2.7. If this wheel is
# cached and installed into a Python 2.6 environment, the mixbox.cache module
# won't work.
#
# https://www.python.org/dev/peps/pep-0345/#environment-markers
[metadata]
license_file = LICENSE.txt
requires-dist =
    lxml
    python-dateutil
    ordered-set
    weakrefset; python_version < "2.7"
    weakrefmethod>=1.0.3; python_version < "3.4"
    importlib; python_version < "2.7"
