[bumpversion]
current_version = 1.0.5
tag = True
commit = True

[bumpversion:file:mixbox/version.py]

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE.txt
requires-dist = 
	lxml
	python-dateutil
	ordered-set
	weakrefset; python_version < "2.7"
	weakrefmethod>=1.0.3; python_version < "3.4"
	importlib; python_version < "2.7"

